--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: SOLID.
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
-baseurl: "/chatni" #important: start with /
+baseurl: "/chatni.github.io" #important: start with /
 url: "http://chatni.github.io"
 
 # Build settings
